--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
 			<dependency>
 				<groupId>com.sshtools</groupId>
 				<artifactId>jini-config</artifactId>
-				<version>0.6.2-SNAPSHOT</version>
+				<version>0.6.2</version>
 			</dependency>
 			<dependency>
 				<groupId>info.picocli</groupId>
