--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 		<module>web</module>
 		<module>extensions</module>
 		<module>sdk</module>
-		<module>installer</module>
+		<!--<module>installer</module>-->
 	</modules>
 	<inceptionYear>2025</inceptionYear>
 	<url>https://github.com/bithatch/tnfs-java</url>
