More build improvements. Added more options for what addresses to use for server sockets and mdns.

--- a/daemon/Dockerfile
+++ b/daemon/Dockerfile
@@ -34,11 +34,12 @@ RUN mvn -f $HOME/pom.xml clean package -Dbuild.native.daemon=true
 # Package stage
 #
 FROM debian:stable-slim 
-COPY --from=build /usr/app/daemon/target/tnfsd /app/tnfsd
+COPY --from=build /usr/app/daemon/target/tnfsjd /app/tnfsjd
 COPY --from=build /usr/app/daemon/target/tnfs-user /app/tnfs-user
-COPY --from=build /usr/app/daemon/src/main/docker/configuration /etc/tnfsd
+COPY --from=build /usr/app/daemon/src/main/docker/configuration /etc/tnfsjd
+COPY --from=build /usr/app/daemon/src/main/docker/public-files /public-files
 EXPOSE 16384
 EXPOSE 16384/udp
-VOLUME /data
-VOLUME /etc/tnfsd
-ENTRYPOINT /app/tnfsd -L INFO
+VOLUME /public-files
+VOLUME /configuration
+ENTRYPOINT /app/tnfsjd -L INFO -C /etc/tnfsjd -O /configuration
