--- a/daemon/pom.xml
+++ b/daemon/pom.xml
@@ -28,7 +28,7 @@
 		<groupId>uk.co.bithatch</groupId>
 		<artifactId>tnfs-java</artifactId>
 		<version>0.9.0-SNAPSHOT</version>
-		<relativePath>../</relativePath>
+		<relativePath>../</relativePath> 
 	</parent> 
 	<artifactId>tnfs-java-daemon</artifactId>
 	<name>Java TNFS - Daemon</name>
@@ -44,6 +44,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>tnfs-java-daemonlib</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 		</dependency>
@@ -51,10 +56,6 @@
             <groupId>info.picocli</groupId>
             <artifactId>picocli</artifactId>
         </dependency>
-        <dependency>
-		    <groupId>org.jmdns</groupId>
-		    <artifactId>jmdns</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>com.sshtools</groupId> 
 			<artifactId>porter</artifactId>
@@ -70,6 +71,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+					<release>17</release>
+					<testRelease>17</testRelease>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>info.picocli</groupId>
@@ -86,13 +89,13 @@
 				<inherited>false</inherited>
 				<executions>
 					<execution>
-						<id>make-assembly-tnfsd</id>
+						<id>make-assembly-tnfsjd</id>
 						<phase>package</phase>
 						<goals>
 							<goal>single</goal>
 						</goals>
 						<configuration>
-							<finalName>tnfsd</finalName>
+							<finalName>tnfsjd</finalName>
 							<archive>
 								<manifest>
 									<mainClass>uk.co.bithatch.tnfs.daemon.TNFSDaemon</mainClass>
@@ -168,7 +171,7 @@
 						<artifactId>native-maven-plugin</artifactId>
 						<executions>
 							<execution>
-								<id>tnfsd-native-image</id>
+								<id>tnfsjd-native-image</id>
 								<goals>
 									<goal>build</goal>
 								</goals>
@@ -176,7 +179,7 @@
 								<configuration>
 									<mainClass>uk.co.bithatch.tnfs.daemon.TNFSDaemon</mainClass>
 									<skip>false</skip>
-									<imageName>tnfsd</imageName>
+									<imageName>tnfsjd</imageName>
 									<buildArgs>
 										<buildArg>--install-exit-handlers</buildArg>
                                         <buildArg>-march=compatibility</buildArg>
@@ -207,10 +210,10 @@
 
 		<!-- tnfscp -->
 		<profile>
-			<id>tnfsd</id>
+			<id>tnfsjd</id>
 			<activation>
 				<property>
-					<name>tnfsd</name>
+					<name>tnfsjd</name>
 				</property>
 			</activation>
 			<build>
