--- a/daemon/src/main/docker/configuration/mounts.ini
+++ b/daemon/src/main/docker/configuration/mounts.ini
@@ -4,11 +4,14 @@
 ;----------------------------------------
 [mount]
 
-; Exported Path - The path that is exported to clients.
-path = /
+	; Exported Path - The path that is exported to clients.
+	path = /
 
-; Local Path - The local path where thee files for this mount actually are.
-local = /data
+; Local Path - The local path where these files for this mount actually are.
+	local = /public-files
 
-; Authentication - The type of authentication required for this mount. An empty  list means no authenitcation is required at all (the default).
-;authentication =  BASIC, SCRAM
+	; Authentication - The type of authentication required for this mount. An empty  list means no authenitcation is required at all (the default).
+	;authentication =  BASIC, SCRAM
+	
+	; Only allow read operations on this mount, regardless of the writability of the underlying file system.
+	read-only = false
