--- a/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/Configuration.schema.ini
+++ b/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/Configuration.schema.ini
@@ -11,13 +11,6 @@
 		this server to the internet. 
 	type = BOOLEAN
 	default-value = false
-	
-[server.announce]
-	name = Announce
-	description = Announce this server using mDNS, allowing other hosts on your network \
-		to easily find it and its configuration. 
-	type = BOOLEAN
-	default-value = true
 
 [server.port]
 	name = Port
@@ -28,8 +21,10 @@
 [server.address]
 	name = Address
 	description = The IPv4 or IPv6 address of the interface the server will listen for TNFS \
-				  requests. The default is to listen to loopback only. Use :: to listen on \
-				  all IPv4 and IPv6 interfaces;
+				  requests. The default is to listen to loopback only (`localhost`). Use * to listen on \
+				  all IPv4 andor IPv6 interfaces, depending on the default configuration, \
+				  or `::` to listen on all IPv6 addresses or `0.0.0.0` to listen on all \
+				  IPv4 addresses. You can also use `%` to indicate the first found LAN address.
 	type = TEXT 
 	descriminator = IP
 	
@@ -49,3 +44,26 @@
 				  {hostname} is replaced by actual hostname of bound address..
 	type = TEXT
 	default-value= TNFS on {hostname}
+
+; --------------------------------
+; mDNS configuration
+; --------------------------------
+[mdns]
+	name = mDNS
+	description = mDNS for the TNFS server
+	
+[mdns.address]
+	name = Address
+	description = The address of the local interface that mDNS requests will be made from. If this is \
+		a wildcard address, then multihomed mDNS will be used. If it is blank, the `address` in the \
+		`server` section will be used , otherwise the address will be interpreted in the same way \
+		as the `server` `address`.
+	type = TEXT 
+	descriminator = IP 
+	
+[mdns.announce]
+	name = Announce
+	description = Announce this server using mDNS, allowing other hosts on your network \
+		to easily find it and its configuration. 
+	type = BOOLEAN
+	default-value = true
