--- a/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/MountConfiguration.schema.ini
+++ b/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/MountConfiguration.schema.ini
@@ -4,6 +4,7 @@
 [mount]
 	name = Mount
 	description = Defines a single mounted path.
+	multiplicity = ANY
 	
 [mount.path]
 	name = Exported Path
@@ -27,4 +28,11 @@
 	multiplicity = ANY
 	value = BASIC
 	value = SCRAM
+	
+[mount.read-only]
+	name = Read Only
+	description = Only allow read operations on this driver, regardless of the \
+		writability of the underlying file system.
+	type = BOOLEAN
+	default-value  = false
 	
