--- a/web/src/main/resources/uk/co/bithatch/tnfs/web/Configuration.schema.ini
+++ b/web/src/main/resources/uk/co/bithatch/tnfs/web/Configuration.schema.ini
@@ -12,12 +12,29 @@
 	type = BOOLEAN
 	default-value = false
 	
-[server.announce]
+; --------------------------------
+; mDNS configuration
+; --------------------------------
+[mdns]
+	name = mDNS
+	description = mDNS for the TNFS server
+	
+[mdns.address]
+	name = Address
+	description = The address of the local interface that mDNS requests will be made from. If this is \
+		a wildcard address, then multihomed mDNS will be used. If it is blank, the `address` in the \
+		`server` section will be used , otherwise the address will be interpreted in the same way \
+		as the `server` `address`.
+	type = TEXT 
+	descriminator = IP 
+	
+[mdns.announce]
 	name = Announce
 	description = Announce this server using mDNS, allowing other hosts on your network \
 		to easily find it and its configuration. 
 	type = BOOLEAN
 	default-value = true
+
 	
 ; --------------------------------
 ; TNFS Mount Configuration
@@ -96,7 +113,6 @@
 				  requests. A blank address will listen on all on IPv4 and IPV6 interfaces.
 	type = TEXT 
 	descriminator = IP
-	default-value = ::
 
 ; --------------------------------
 ; HTTPS configuration
@@ -119,7 +135,6 @@
 				  requests. A blank address will listen on all on IPv4 and IPV6 interfaces.
 	type = TEXT
 	descriminator = IP
-	default-value = ::
 
 [https.key-password]
 	name = Key Password
