--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 		<module>lib</module>
 		<module>client</module>
 		<module>server</module>
+		<module>daemonlib</module>
 		<module>daemon</module>
 		<module>cli</module>
 		<module>fuse</module>
@@ -77,7 +78,7 @@
 			<dependency>
 			    <groupId>com.ongres.scram</groupId>
 			    <artifactId>scram-client</artifactId>
-			    <version>3.1</version>
+			    <version>3.2</version>
 			</dependency>
 			<dependency>
 			    <groupId>com.ongres.scram</groupId>
@@ -169,7 +170,7 @@
 			<dependency>
 				<groupId>org.jmdns</groupId>
 				<artifactId>jmdns</artifactId>
-				<version>3.6.1</version>
+				<version>3.6.2</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -240,8 +241,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.12.1</version>
 					<configuration>
-						<release>22</release>
-						<testRelease>22</testRelease>
+						<release>17</release>
+						<testRelease>17</testRelease>
 					</configuration>
 				</plugin>
 				<plugin>
