Completed in-memory server file system. Added NIO client file system implementation.

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 		<module>daemon</module>
 		<module>cli</module>
 		<module>fuse</module>
+		<module>nio</module>
 		<module>web</module>
 		<module>extensions</module>
 		<module>sdk</module>
