More default config tweaks

--- a/web/src/main/resources/uk/co/bithatch/tnfs/web/Configuration.schema.ini
+++ b/web/src/main/resources/uk/co/bithatch/tnfs/web/Configuration.schema.ini
@@ -23,11 +23,10 @@
 	name = Address
 	description = The address of the local interface that mDNS requests will be made from. If this is \
 		a wildcard address, then multihomed mDNS will be used. If it is blank, the `address` in the \
-		`server` section will be used , otherwise the address will be interpreted in the same way \
-		as the `server` `address`.
+		`http` section or `https` section will be used, otherwise the address will be interpreted in the same way \
+		as `http` `address`.
 	type = TEXT 
 	descriminator = IP 
-	default-value = %
 	
 [mdns.announce]
 	name = Announce
@@ -111,9 +110,11 @@
 [http.address]
 	name = Address
 	description = The IPv4 or IPv6 address of the interface the server will listen for HTTP \
-				  requests. A blank address will listen on all on IPv4 and IPV6 interfaces.
+				  requests. A blank address will listen on localhost only, `*` will listen all \
+				  on IPv4 and IPV6 interfaces. A `%` will listen on  the first found LAN address. 
 	type = TEXT 
 	descriminator = IP
+	default-value = %
 
 ; --------------------------------
 ; HTTPS configuration
@@ -133,9 +134,11 @@
 [https.address]
 	name = Address
 	description = The IPv4 or IPv6 address of the interface the server will listen for HTTPS \
-				  requests. A blank address will listen on all on IPv4 and IPV6 interfaces.
+				  requests. A blank address will listen on localhost only, `*` will listen all \
+				  on IPv4 and IPV6 interfaces. A `%` will listen on  the first found LAN address.
 	type = TEXT
 	descriminator = IP
+	default-value = %
 
 [https.key-password]
 	name = Key Password
