--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -32,4 +32,10 @@
 	</parent>
 	<artifactId>tnfs-java-lib</artifactId>
 	<name>Java TNFS - Common Library</name>
+	<dependencies>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+		</dependency>
+	</dependencies>
 </project>
