--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -262,7 +262,7 @@
                                 <id>build-windows-installer</id>
                                 <configuration>
                                     <scriptFile>${basedir}/src/main/nsis/tnfsj.nsi</scriptFile>
-                                    <outputFile>${sdk.assembly.finalName}.exe</outputFile>
+                                    <outputFile>${sdk.assembly.finalName}-distribution.exe</outputFile>
                                     <attachArtifact>false</attachArtifact>
                                 </configuration>
                                 <phase>package</phase>
@@ -288,7 +288,7 @@
 		                <executions>
 		                    <execution>
 		                        <id>upload-sdk</id>
-		                        <phase>package</phase>
+		                        <phase>deploy</phase>
 		                        <configuration>
 		                            <target>
 		                                <ftp action="mkdir"
