Lots of windows fixes.

--- a/web/src/main/resources/uk/co/bithatch/tnfs/web/Configuration.schema.ini
+++ b/web/src/main/resources/uk/co/bithatch/tnfs/web/Configuration.schema.ini
@@ -206,7 +206,7 @@
 		descriptionn = The directory path to place the logs. This will be created if it does not exist.
 		type = TEXT
 		descriminator = PATH
-		default-value = logs
+		default-value = log
 	
 	[ncsa.extended]
 		name = Extended
